--- a/resource-investors.html
+++ b/resource-investors.html
@@ -154,7 +154,7 @@
 									<li><a href="resource-legal.html">Legal Disclaimers</a></li>
                                 </ul>
                             </li>
-							<li><a href="ico/index.html">ICO Page</a></li>
+							<li><a href="https://ico.medicureon.com/">ICO Page</a></li>
                             <li class="menu-item-has-children">
                                 <a href="article.html">News/Article</a>
                                 <ul class="sub-menu">
