--- a/about.html
+++ b/about.html
@@ -456,7 +456,7 @@
 							
 							<p>You have full control over your information, with the ability to access, correct, or delete your data and manage consent preferences. All data is retained securely for the minimum time required to fulfill its purpose or meet legal obligations. By using our platform, you agree to the terms outlined in this Privacy Statement.</p>
 							
-							<p>If you have any questions or concerns, or to exercise your rights, please contact us at via Email/Phone. We will post updates to this Privacy Statement on our website, clearly indicating the effective date.</p>
+							<p>If you have any questions or concerns, or to exercise your rights, please contact us via Email or Phone. We will post updates to this Privacy Statement on our website, clearly indicating the effective date.</p>
                         </div>
                     </div>
 
