--- a/signin/index.html
+++ b/signin/index.html
@@ -31,7 +31,7 @@
                 <!-- Sign Up Link -->
                 <div class="signup-link">
                     <span>Don't have an account?</span>
-                    <a href="https://medicureonprod.b2clogin.com/<your-tenant>.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_signup">Sign Up</a>
+                    <a href="https://medicureonprod.b2clogin.com/medicureonprod.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_signup">Sign Up</a>
                 </div>
             </div>
         </div>
