--- a/signin/index.html
+++ b/signin/index.html
@@ -16,7 +16,7 @@
                 <p>Please sign in to continue.</p>
 
                 <!-- Azure AD B2C Content Injection Placeholder -->
-                <div id="api" class="b2c-placeholder">
+                <div id="api">
                     <!-- Azure AD B2C dynamically injects login fields and social buttons here -->
                 </div>
 
