--- a/signin/index.html
+++ b/signin/index.html
@@ -16,17 +16,12 @@
                 <p>Please sign in to continue.</p>
 
                 <!-- Azure AD B2C Content Injection Placeholder -->
-                <div id="api" class="b2c-placeholder">
-                    <!-- Azure AD B2C dynamically injects login fields and social buttons here -->
-                </div>
+                <div id="api"></div>
 
                 <!-- OR Divider -->
                 <div class="divider">
                     <span>- OR Continue with -</span>
                 </div>
-
-                <!-- Azure AD B2C Injected Social Buttons -->
-                <!-- Social login buttons will be handled by Azure AD B2C -->
 
                 <!-- Sign Up Link -->
                 <div class="signup-link">
@@ -44,6 +39,8 @@
     </div>
 
     <!-- Azure AD B2C Content Injection Script -->
-    <script type="application/javascript" src="https://medicureonprod.b2clogin.com/static/js/1.0.0/contentInjection.js"></script>
+    <script>
+        // Azure AD B2C will inject the necessary elements into the div with id="api"
+    </script>
 </body>
 </html>
