--- a/signin/index.html
+++ b/signin/index.html
@@ -9,43 +9,22 @@
 </head>
 <body>
     <div class="container">
-        <!-- Left Section -->
-        <div class="left-section">
-            <div class="content">
-                <h1>Welcome Back</h1>
-                <p>Please sign in to continue.</p>
+        <h1>Welcome Back</h1>
+        <p>Please sign in to continue.</p>
 
-                <!-- Azure AD B2C Content Injection Placeholder -->
-                <div id="api">
-                    <!-- Azure AD B2C dynamically injects login fields and social buttons here -->
-                </div>
+        <!-- Azure AD B2C Content Injection Placeholder -->
+        <div id="api"></div>
 
-                <!-- OR Divider -->
-                <div class="divider">
-                    <span>- OR Continue with -</span>
-                </div>
-
-                <!-- Azure AD B2C Injected Social Buttons -->
-                <!-- Social login buttons will be handled by Azure AD B2C -->
-
-                <!-- Sign Up Link -->
-                <div class="signup-link">
-                    <span>Don't have an account?</span>
-                    <a href="https://medicureonprod.b2clogin.com/medicureonprod.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_signup">Sign Up</a>
-                </div>
-            </div>
+        <!-- OR Divider -->
+        <div class="divider">
+            <span>- OR Continue with -</span>
         </div>
 
-        <!-- Right Section -->
-        <div class="right-section">
-            <img src="image.png" alt="Background Image" class="background-image">
-            <img class="logo" src="medicureon60x60.png" alt="Logo">
+        <!-- Sign Up Link -->
+        <div class="signup-link">
+            <span>Don't have an account?</span>
+            <a href="https://medicureonprod.b2clogin.com/medicureonprod.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_signup">Sign Up</a>
         </div>
     </div>
-
-    <!-- Azure AD B2C Content Injection Script -->
-    <script>
-        
-    </script>
 </body>
 </html>
