--- a/signin/index.html
+++ b/signin/index.html
@@ -4,43 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f5f5f5;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Welcome Back</h1>
-        <p>Please sign in to continue.</p>
+        <!-- Left Section -->
+        <div class="left-section">
+            <div class="content">
+                <h1>Welcome Back</h1>
+                <p>Please sign in to continue.</p>
 
-        <!-- Azure AD B2C Content Injection Placeholder -->
-        <div id="api"></div>
+                <!-- Azure AD B2C Content Injection Placeholder -->
+                <div id="api">
+                    <!-- Azure AD B2C dynamically injects login fields and social buttons here -->
+                </div>
 
-        <!-- OR Divider -->
-        <div class="divider">
-            <span>- OR Continue with -</span>
+                <!-- OR Divider -->
+                <div class="divider">
+                    <span>- OR Continue with -</span>
+                </div>
+
+                <!-- Azure AD B2C Injected Social Buttons -->
+                <!-- Social login buttons will be handled by Azure AD B2C -->
+
+                <!-- Sign Up Link -->
+                <div class="signup-link">
+                    <span>Don't have an account?</span>
+                    <a href="https://medicureonprod.b2clogin.com/medicureonprod.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_signup">Sign Up</a>
+                </div>
+            </div>
         </div>
 
-        <!-- Sign Up Link -->
-        <div class="signup-link">
-            <span>Don't have an account?</span>
-            <a href="https://medicureonprod.b2clogin.com/medicureonprod.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_signup">Sign Up</a>
+        <!-- Right Section -->
+        <div class="right-section">
+            <img src="image.png" alt="Background Image" class="background-image">
+            <img class="logo" src="medicureon60x60.png" alt="Logo">
         </div>
     </div>
+
+    <!-- Azure AD B2C Content Injection Script -->
+    <script>
+
+</script>
 </body>
 </html>
