--- a/signin/index.html
+++ b/signin/index.html
@@ -16,7 +16,7 @@
                 <p>Please sign in to continue.</p>
 
                 <!-- Azure AD B2C Content Injection Placeholder -->
-                <div id="api">
+                <div id="api" class="b2c-placeholder">
                     <!-- Azure AD B2C dynamically injects login fields and social buttons here -->
                 </div>
 
@@ -44,8 +44,6 @@
     </div>
 
     <!-- Azure AD B2C Content Injection Script -->
-    <script>
-
-</script>
+    <script type="application/javascript" src="https://medicureonprod.b2clogin.com/static/js/1.0.0/contentInjection.js"></script>
 </body>
 </html>
