--- a/signin/index.html
+++ b/signin/index.html
@@ -45,7 +45,5 @@
         </div>
     </div>
 
-    <!-- Azure AD B2C Content Injection Script -->
-    <script type="application/javascript" src="https://medicureonprod.b2clogin.com/static/js/1.0.0/contentInjection.js"></script>
-</body>
+    /body>
 </html>
