--- a/signin/index.html
+++ b/signin/index.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
-<!-- saved from url=(0080)../assets/AzureBlue/selfAsserted.cshtml -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <title>Sign in</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+	<link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
-    
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-
-    <link href="./css/assets.css" rel="stylesheet" type="text/css" />
-    <link href="./css/common.css" rel="stylesheet" type="text/css" />
-    <link href="./css/unified.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="container  unified_container ">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <img alt="Company Logo" class="companyLogo" src="../assets/images/logo.svg">
-                        <div id="api">
-                        </div>
-                    </div>
+    <div class="container">
+        <!-- Left Section -->
+        <div class="left-section">
+            <div class="content">
+                <h1>Welcome Back</h1>
+                <p>Please sign in to continue.</p>
+
+                <!-- Azure AD B2C Content Injection Placeholder -->
+                <div id="api" class="b2c-placeholder">
+                    <!-- Azure AD B2C dynamically injects login fields and social buttons here -->
+                </div>
+
+                <!-- OR Divider -->
+                <div class="divider">
+                    <span>- OR Continue with -</span>
+                </div>
+
+                <!-- Azure AD B2C Injected Social Buttons -->
+                <!-- Social login buttons will be handled by Azure AD B2C -->
+
+                <!-- Sign Up Link -->
+                <div class="signup-link">
+                    <span>Don't have an account?</span>
+                    <a href="https://medicureonprod.b2clogin.com/medicureonprod.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_signup">Sign Up</a>
                 </div>
             </div>
         </div>
+
+        <!-- Right Section -->
+        <div class="right-section">
+            <img src="image.png" alt="Background Image" class="background-image">
+            <img class="logo" src="medicureon60x60.png" alt="Logo">
+        </div>
     </div>
 
-
-</body></html>
+    <!-- Azure AD B2C Content Injection Script -->
+    <script type="application/javascript" src="https://medicureonprod.b2clogin.com/static/js/1.0.0/contentInjection.js"></script>
+</body>
+</html>
