--- a/about.html
+++ b/about.html
@@ -423,10 +423,10 @@
                             </div>
                             <div class="grid">
                                 <div class="member-pic">
-                                    <img src="assets/images/about/gabe.png" alt>
+                                    <img src="assets/images/about/david.png" alt>
                                 </div>
                                 <div class="member-info">
-                                    <h4>Gabe Correa</h4>
+                                    <h4>David Bonilla</h4>
                                     <span>Sr. Advisor (Blockchain)</span>
                                 </div>
                             </div>
