--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,42 @@
 </head>
 
 <body>
+<script>
+document.getElementById('contact-form-s2').addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent the form from submitting the traditional way
 
+    // Perform validation
+    let name = document.getElementById('name').value;
+    let email = document.getElementById('email').value;
+    let location = document.getElementById('location').value;
+    let message = document.querySelector('textarea[name="message"]').value;
+
+    if (name === '' || email === '' || location === '' || message === '') {
+        alert('Please fill out all fields.');
+        return;
+    }
+
+    // If validation passes, submit the form via AJAX
+    let formData = new FormData(this);
+
+    fetch(this.action, {
+        method: this.method,
+        body: formData
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.success) {
+            document.getElementById('success').style.display = 'block';
+        } else {
+            document.getElementById('error').style.display = 'block';
+        }
+    })
+    .catch(error => {
+        console.error('Error:', error);
+        document.getElementById('error').style.display = 'block';
+    });
+});
+</script>
     <!-- start page-wrapper -->
     <div class="page-wrapper">
 
@@ -155,6 +190,7 @@
                                 </ul>
                             </li>
 							<li><a href="https://ico.medicureon.com/">ICO Page</a></li>
+						<li><a href="https://hub.medicureon.com" target="_blank" rel="noopener noreferrer">Main Hub</a></li>
                             <li class="menu-item-has-children">
                                 <a href="article.html">News/Article</a>
                                 <ul class="sub-menu">
@@ -238,7 +274,7 @@
                     </div>
                     <div class="col col-md-6">
                         <div class="contact-form"> 
-                            <form method="post" id="contact-form-s2" class="form row contact-validation-active">
+                            <form method="post" id="contact-form-s2" class="form row contact-validation-active" action="submit_form.php">
                                 <div class="col col-xs-12">
                                     <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
                                 </div>
@@ -314,6 +350,8 @@
                                     <li><a href="resources.html">Visit Knowledge Base</a></li>
                                     <li><a href="#">Support System</a></li>
                                     <li><a href="capabilities.html">Professional Capabilities</a></li>
+                                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                    <li><a href="terms-of-use.html">Terms of Use</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -351,7 +389,7 @@
                     <div class="row">
                         <div class="col col-xs-6">
                             <div class="copyright-area">
-                                <p>2024 &copy; All Rights Reserved by MediCureOn LLC</p>
+                                <p>2025-2026 &copy; All Rights Reserved by MediCureOn LLC</p>
                             </div>
                         </div>
                         <div class="col col-xs-6">
