--- a/projects.html
+++ b/projects.html
@@ -162,6 +162,7 @@
                                     <li><a href="blog-details.html">Blog details</a></li>
                                 </ul>
                             </li>
+                            <li><a href="https://hub.medicureon.com" target="_blank" rel="noopener noreferrer">Main Hub</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div><!-- end of nav-collapse -->
@@ -405,12 +406,13 @@
                             <div class="widget support-widget">
                                 <h3>Support</h3>
                                 <ul>
-                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
                                     <li><a href="#">Submit a Ticket</a></li>
-                                    <li><a href="#">Visit Knowledge Base</a></li>
+                                    <li><a href="resources.html">Visit Knowledge Base</a></li>
                                     <li><a href="#">Support System</a></li>
-                                    <li><a href="#">Refund Policy</a></li>
-                                    <li><a href="#">Professional Services</a></li>
+                                    <li><a href="capabilities.html">Professional Capabilities</a></li>
+                                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                    <li><a href="terms-of-use.html">Terms of Use</a></li>
                                 </ul>
                             </div>
                         </div>
