--- a/about.html
+++ b/about.html
@@ -155,6 +155,7 @@
                                 </ul>
                             </li>
 							<li><a href="https://ico.medicureon.com/">ICO Page</a></li>
+						<li><a href="https://hub.medicureon.com" target="_blank" rel="noopener noreferrer">Main Hub</a></li>
                             <li class="menu-item-has-children">
                                 <a href="article.html">News/Article</a>
                                 <ul class="sub-menu">
@@ -423,10 +424,10 @@
                             </div>
                             <div class="grid">
                                 <div class="member-pic">
-                                    <img src="assets/images/about/gabe.png" alt>
+                                    <img src="assets/images/about/david.png" alt>
                                 </div>
                                 <div class="member-info">
-                                    <h4>Gabe Correa</h4>
+                                    <h4>David Bonilla</h4>
                                     <span>Sr. Advisor (Blockchain)</span>
                                 </div>
                             </div>
@@ -436,7 +437,9 @@
             </div> <!-- end container -->
         </section>
         <!-- end team-section -->
-
+		
+		<!-- Privacy Statement Removed - See privacy-policy.html for full details -->
+        </section>
 
         <!-- start site-footer -->
         <footer class="site-footer">
@@ -478,6 +481,8 @@
                                     <li><a href="resources.html">Visit Knowledge Base</a></li>
                                     <li><a href="#">Support System</a></li>
                                     <li><a href="capabilities.html">Professional Capabilities</a></li>
+                                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                    <li><a href="terms-of-use.html">Terms of Use</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -515,7 +520,7 @@
                     <div class="row">
                         <div class="col col-xs-6">
                             <div class="copyright-area">
-                                <p>2024 &copy; All Rights Reserved by MediCureOn LLC</p>
+                                <p>2025-2026 &copy; All Rights Reserved by MediCureOn LLC</p>
                             </div>
                         </div>
                         <div class="col col-xs-6">
